Corrigido link para política

--- a/alexa/terms-of-use-alexa-skills.html
+++ b/alexa/terms-of-use-alexa-skills.html
@@ -29,7 +29,7 @@
                     <h2>General</h2>
                     <p>This Terms of Use are an agreement between you (the ”user”) and Marcelo Vieira
                         (“me”, “us” or “we”). Before using any of our Alexa Skills (“our skills”), please read this
-                        agreement and our <a href="">Alexa Skills Privacy Policy</a> as well as the <a
+                        agreement and our <a href="privacy-policy-alexa-skills.html">Alexa Skills Privacy Policy</a> as well as the <a
                             href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201809740">Alexa Terms of
                             Use</a> by the Amazon
                         Digital Services LLC (with its affiliates, “Amazon”).</p>
