--- a/alexa/terms-of-use-alexa-skills.html
+++ b/alexa/terms-of-use-alexa-skills.html
@@ -51,7 +51,7 @@
                     <h2>General</h2>
                     <p>Estes Termos de Uso são um acordo entre você (the ”user”) e Marcelo Vieira
                         (“eu” ou “nós”). Antes de utilizar qualquer um de nossos Alexa Skills (“nossos skills”), por
-                        favor leia este acordo e nossa <a href="">Política de Privacidade para Alexa Skills</a> bem como
+                        favor leia este acordo e nossa <a href="privacy-policy-alexa-skills.html">Política de Privacidade para Alexa Skills</a> bem como
                         o <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201809740">Termos de Uso
                             da Alexa (em inglês)</a> da Amazon
                         Digital Services LLC (com suas afiliadas, “Amazon”).</p>
